--- a/style.css
+++ b/style.css
@@ -1,3 +1,63 @@
 body{
     margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    background:url("https://images.unsplash.com/photo-1506057213367-028a17ec52e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+    justify-content: center;
+    background-size: cover;
+
+}
+h2{
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 16px;
+    text-align: center;
+
+}
+.clock{
+    position: relative;
+    display: flex;
+    gap:5px;
+}
+
+.clock span{
+    /* border:2px solid black; */
+    background-color:darkcyan;
+    opacity: .79;
+    position:relative;
+    color:aliceblue;
+    border-radius: 6px;
+    padding-bottom: 20px;
+    display:flex;
+    width:100px;
+    height:100px;
+    justify-content: center;
+    align-items: center;
+    font-size:40px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+    
+}
+
+.clock .text{
+    height:30px;
+    position: absolute;
+    margin-top:-30px;
+    font-size:12px;
+    padding-bottom: 0;
+    text-transform: uppercase;
+    background-color: rgb(0, 62, 62);
+    opacity: 0.8;
+    letter-spacing: 2px;
+}
+.clock #ampm{
+    position:absolute;
+    bottom: 0;
+    font-size:20px;
+    padding-bottom: 0px;
+    width:50px;
+    height:30px;
+    background-color: blue;
 }
