--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 h2{
     text-transform: uppercase;
     letter-spacing: 4px;
+    color:white;
     font-size: 16px;
     text-align: center;
 
