--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body{
     height: 100vh;
     flex-direction: column;
     align-items: center;
-    background:url("https://images.unsplash.com/photo-1506057213367-028a17ec52e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
     justify-content: center;
+    background:url("https://images.unsplash.com/photo-1506057213367-028a17ec52e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
     background-size: cover;
 
 }
@@ -61,4 +61,19 @@ h2{
     width:50px;
     height:30px;
     background-color: blue;
+}
+@media screen and ( max-width:980px ){
+    body{
+        margin: auto;
+        width: 60%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-size: cover;
+        background-position:-8rem;
+        background-repeat: no-repeat;
+    }
+    .clock{
+       width: 90vw;
+    }
 }
